# memex_cli

./: .env.offline  .env.online  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  err.txt  install_memex.bat  install_memex.ps1  install_memex.py  install_memex.sh  out.txt
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/hooks/: http_client.py  project_utils.py
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: app.rs  lib.rs  main.rs  task_level.rs  utils.rs
cli/src/commands/: cli.rs  db.rs  init.rs  memory.rs  mod.rs  stdio.rs  sync.rs
cli/src/flow/: flow_qa.rs  flow_standard.rs  flow_tui.rs  mod.rs
cli/src/http/: middleware.rs  mod.rs  models.rs  routes.rs  server.rs  state.rs  validation.rs
cli/src/http/client/: mod.rs  remote.rs
cli/src/stdio/: execute.rs
cli/src/tui/: app.rs  events.rs  loop_run.rs  mod.rs  prompt.rs  terminal.rs  ui.rs
cli/src/utils/: mod.rs  project_id.rs
core/: Cargo.toml
core/benches/: hotspot_analysis.rs  stdio_perf.rs  stream_json_comparison.rs  stream_json_v2_comparison.rs
core/examples/: state_management.rs
core/src/: api.rs  context.rs  lib.rs  tui.rs
core/src/backend/: mod.rs
core/src/config/: load.rs  mod.rs  types.rs
core/src/engine/: mod.rs  post.rs  pre.rs  run.rs  types.rs
core/src/error/: error.rs  executor.rs  mod.rs  stdio.rs
core/src/events_out/: helpers.rs  mod.rs  writer.rs
core/src/executor/: engine.rs  graph.rs  mod.rs  output.rs  progress.rs  scheduler.rs
core/src/executor/traits/: mod.rs  processor.rs  renderer.rs  strategy.rs
core/src/executor/types/: config.rs  error.rs  mod.rs  result.rs  task.rs
core/src/gatekeeper/: decision.rs  evaluate.rs  gatekeeper_reasons.rs  helpers.rs  mod.rs  signals.rs
core/src/input/: mod.rs  parser.rs
core/src/memory/: adapters.rs  candidates.rs  client.rs  helpers.rs  mod.rs  models.rs  payloads.rs  render.rs  syncable.rs  trait.rs  types.rs
core/src/replay/: aggregate.rs  cmd.rs  diff.rs  eval.rs  model.rs  overrides.rs  parse.rs  report.rs
core/src/runner/: abort.rs  control.rs  io_pump.rs  mod.rs  observe.rs  output.rs  policy.rs  run.rs  runtime.rs  state_report.rs  tee.rs  traits.rs  types.rs
core/src/state/: manager.rs  mod.rs  session.rs  snapshot.rs  transitions.rs  types.rs
core/src/stdio/: files.rs  id_gen.rs  mod.rs  parser.rs  protocol.rs  render.rs  retry.rs  serde_utils.rs  types.rs
core/src/stdio/parsers/: mod.rs  standard.rs
core/src/stream/: mod.rs  traits.rs  types.rs
core/src/tool_event/: correlate.rs  linker.rs  metrics.rs  mod.rs  model.rs  multi_parser.rs  parser.rs  run_id_extract.rs  runtime.rs  stream_json.rs  stream_json_optimized.rs  stream_json_v2.rs
core/src/util/: mod.rs  project_id.rs  ring_bytes.rs
core/tests/: perf_tool_event_runtime.rs  tool_events_claude.rs  tool_events_codex.rs  tool_events_gemini.rs
core/tests/common/: mod.rs
docs/: ARCHITECTURE_ANALYSIS.md  MEMORY_ARCHITECTURE.md  MEMORY_LIFECYCLE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  STATE-USAGE-GUIDE.md  SYNC_API.md  claude_out.txt  codex_out.txt  config-loading-priority.md  gemini_out.txt  mem-codecli-design.md  mvp.md  startup-flow.md  tui-design.md  tui-exit-issue.md  tui-feature-list.txt
examples/: 01_simple_prompt.txt  02_multi_task_workflow.txt  03_code_review_workflow.txt  README.md  calculator.html  dfs_algorithm.rs  fibonacci.rs  hello.py  login.html  session-compliance-report.md  skill-test-cases.md  test-report.md
memory/: requirements-http.txt
memory/.claude-plugin/: plugin.json
memory/hooks/: hooks.json
memory/scripts/: http_client.py  memory-hit.py  memory-inject.py  record-session-enhanced.py  server_manager.py
npm/: .gitignore
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json
npm/memex-cli/: bin.js  package.json
npm/win32-x64/: package.json
plugins/: Cargo.toml  build.rs
plugins/src/: factory.rs  lib.rs  plan.rs  services.rs
plugins/src/backend/: aiservice.rs  codecli.rs  encoding.rs  mod.rs
plugins/src/executor/: mod.rs
plugins/src/executor/processors/: context.rs  files.rs  mod.rs  prompt.rs
plugins/src/executor/renderers/: jsonl.rs  mod.rs  text.rs
plugins/src/executor/strategies/: concurrency.rs  mod.rs  retry.rs
plugins/src/gatekeeper/: standard.rs
plugins/src/memory/: http_client.rs  hybrid.rs  local.rs  mod.rs  service.rs
plugins/src/memory/lance/: embedding.rs  local_embedding.rs  mod.rs  models.rs  schema.rs  store.rs
plugins/src/memory/sync/: conflict.rs  mod.rs  remote_client.rs  service.rs
plugins/src/policy/: config_rules.rs  mod.rs
plugins/src/runner/: aiservice.rs  codecli.rs  mod.rs  replay.rs
plugins/src/stream/: jsonl.rs  mod.rs  text.rs
scripts/: bump-version.ps1  bump-version.sh
src/: cli.rs  config.rs  error.rs  main.rs  memory.rs  policy.rs
src/protocol/: mod.rs  policy_cmd.rs  tool_event.rs
src/runner/: codecli.rs  control.rs  mod.rs  tee.rs
src/util/: ring.rs
