[workspace]
members = [
    "core",
    "plugins",
    "cli",
]

[workspace.dependencies]
memex-core = { path = "core" }
memex-plugins = { path = "plugins" }
memex-cli = { path = "cli" }
tokio = { version = "^1.37", features = ["process", "io-util", "macros", "signal", "rt-multi-thread", "io-std", "fs"] }
clap = { version = "^4.5", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tracing = { version = "^0.1", features = ["attributes"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }
tracing-appender = "^0.2"
anyhow = "^1.0"
async-trait = "^0.1"
bytes = "^1.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
chrono = { version = "^0.4", features = ["serde"] }
toml = "0.8"
futures = "^0.3"
regex = "^1.10"
uuid = { version = "1.8", features = ["v4"] }


tokio-test = "^0.4"
tempfile = "^3.6"
mockito = "^1.3"
pretty_assertions = "^1.3"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.size-release]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true

[workspace.lints.clippy]
# Keep CI strict (-D warnings) but allow a couple of structural lints that are
# acceptable for this codebase.
too_many_arguments = "allow"
module_inception = "allow"