[workspace]
resolver = "2"
members = [
    "core",
    "plugins",
    "cli",
]

[workspace.dependencies]
# Workspace members
memex-core = { path = "core" }
memex-plugins = { path = "plugins" }
memex-cli = { path = "cli" }

# Core async runtime
tokio = { version = "^1.37", features = ["process", "io-util", "macros", "signal", "rt-multi-thread", "io-std", "fs", "sync", "time"] }
futures = "^0.3"
async-trait = "^0.1"

# CLI
clap = { version = "^4.5", features = ["derive"] }

# Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "0.8"

# Error handling
thiserror = "^1.0"
anyhow = "^1.0"

# Logging & tracing
tracing = { version = "^0.1", features = ["attributes"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }
tracing-appender = "^0.2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
bytes = "^1.5"

# Time & UUID
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }

# Text & regex
regex = "^1.10"
encoding_rs = "0.8"

# TUI (Terminal UI)
ratatui = "0.28"
crossterm = "0.28"
atty = "0.2"
indicatif = "0.17"  # Progress bars

# HTTP server (CLI specific)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# System utilities (CLI specific)
arboard = "3.4"      # Clipboard
dirs = "5.0"         # User directories

# File operations (Core optimization)
base64 = "0.22"      # Base64 encoding
glob = "0.3"         # File pattern matching

# Performance optimization (Core Level 2-3)
sysinfo = "0.30"     # CPU monitoring (Level 2.2 dynamic concurrency)
lru = "0.12"         # LRU cache (Level 3.3 file cache)
memmap2 = "0.9"      # Memory-mapped files (Level 3.1 large file optimization)
lazy_static = "1.4"  # Static variables (event buffer, file cache)
num_cpus = "1.16"    # CPU core detection

# Development dependencies
tokio-test = "^0.4"
tempfile = "^3.6"
mockito = "^1.3"
pretty_assertions = "^1.3"
criterion = { version = "0.5", features = ["html_reports"] }
winres = "0.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.size-release]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
# Keep CI strict (-D warnings) but allow a couple of structural lints that are
# acceptable for this codebase.
too_many_arguments = "allow"
module_inception = "allow"
