[workspace]
resolver = "2"
members = [
    "core",
    "plugins",
    "cli",
]

[workspace.dependencies]
# Workspace members
memex-core = { path = "core" }
memex-plugins = { path = "plugins" }
memex-cli = { path = "cli" }

# Core async runtime (minimal features)
tokio = { version = "^1.37", features = ["process", "io-util", "macros", "signal", "rt-multi-thread", "io-std", "fs", "sync", "time"] }
futures = { version = "^0.3"}
async-trait = "^0.1"

# CLI
clap = { version = "^4.5", features = ["std", "derive"] }

# Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["std"] }
toml = { version = "0.8" }

ratatui = { version = "^0.28"}
crossterm = { version = "^0.28"}
atty = { version = "^0.2"}

# Error handling
thiserror = { version = "^1.0"}
anyhow = { version = "^1.0" }

# Logging & tracing (minimal features)
tracing = { version = "^0.1", features = ["attributes", "std"] }
tracing-subscriber = { version = "^0.3", features = ["std", "smallvec", "fmt", "env-filter"] }
tracing-appender = { version = "^0.2" }

# HTTP client (rustls instead of native-tls for smaller size)
axum = { version = "^0.7.9", features = ["http2"] }
tower = { version = "^0.4" }
tower-http = { version = "^0.5", features = ["cors", "trace", "timeout","util"] }
reqwest = { version = "^0.12", features = ["http2", "rustls-tls", "stream"] }
bytes = { version = "^1.5", features = ["std"] }
async-stream = "^0.3"

# System directories
dirs = { version = "5.0" }
arboard = { version = "^3.6.1" }

# Optional performance optimizations
sysinfo = { version = "^0.30"}
lru = { version = "^0.12" }
memmap2 = { version = "^0.9" }
lazy_static = { version = "^1.4" }
num_cpus = { version = "^1.16" }

# Platform-specific
windows = { version = "0.58", features = ["Win32_System_Threading"] }

# Time & UUID (minimal features)
chrono = { version = "^0.4", features = ["clock", "std"] }
uuid = { version = "^1.8", features = ["std"] }
# Text & regex
regex = { version = "^1.10", features = ["std", "unicode"] }
encoding_rs = { version = "^0.8" }

# File operations
base64 = { version = "^0.22", features = ["std"] }
glob = { version = "^0.3" }
indicatif = { version = "^0.17" }

# Optional LanceDB dependencies (for local-memory feature)
lancedb = { version = "^0.23", default-features = false}
arrow = { version = "^56", default-features = false, features = ["ipc"] }
arrow-array = { version = "^56"}
arrow-schema = { version = "^56"}
arrow-buffer = { version = "^56"}
shellexpand = { version = "3.0"}
stream = { version = "^0.1"}

# Development dependencies
tokio-test = { version = "^0.4"}
tempfile = { version = "^3.6"}
mockito = { version = "^1.3" }
pretty_assertions = { version = "^1.3" }
criterion = { version = "^0.5"}
winres = { version = "^0.1" }
which = { version = "^7.0"}

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.size-release]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
# Keep CI strict (-D warnings) but allow a couple of structural lints that are
# acceptable for this codebase.
too_many_arguments = "allow"
module_inception = "allow"
