[package]
name = "memex-cli"
version = "0.1.0"
edition = "2021"
authors = ["chaorenex1"]
license = "Apache-2.0"
description = "Core logic for CodeCLI powered by Memex"
repository = "https://github.com/chaorenex/memex-cli"

[dependencies]
memex-core = { workspace = true}
memex-plugins = { workspace = true}
tokio = { workspace = true}
clap = { workspace = true}
serde_json = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
chrono = { workspace = true}
uuid = { workspace = true}
tracing-appender = { workspace = true}
ratatui = { workspace = true}
crossterm = { workspace = true}
atty = { workspace = true}
arboard = "3.4"

[lints]
workspace = true
