[package]
name = "memex-cli"
version = "1.2.0"
edition = "2021"
authors = ["chaorenex1"]
license = "Apache-2.0"
description = "Core logic for CodeCLI powered by Memex"
repository = "https://github.com/chaorenex1/memex-cli"

[dependencies]
# Workspace members
memex-core = { workspace = true }
memex-plugins = { workspace = true }

# Core runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
encoding_rs = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging & tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Time & UUID
chrono = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
shellexpand = { workspace = true}

# Optional TUI dependencies
ratatui = { workspace = true}
crossterm = { workspace = true}
atty = { workspace = true}

# HTTP client (for daemon)
reqwest = { workspace = true }
futures = { workspace = true }

# Optional HTTP server dependencies
axum = { workspace = true }
tower = { workspace = true}
tower-http = { workspace = true,features = ["util"]}
bytes = { workspace = true }
async-stream = { workspace = true }

# Optional system utilities
arboard = { workspace = true }
dirs = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[build-dependencies]
# Windows resource compiler for embedding icon and version info
winres = { workspace = true }

[lints]
workspace = true
