[package]
name = "memex-core"
version = "1.0.0"
edition = "2021"
authors = ["chaorenex1"]
license = "Apache-2.0"
description = "Core logic for CodeCLI powered by Memex"
repository = "https://github.com/chaorenex/memex-cli"

[dependencies]
tokio = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
thiserror = { workspace = true}
tracing = { workspace = true}
anyhow = { workspace = true}
async-trait = { workspace = true}
reqwest = { workspace = true}
chrono =   { workspace = true}
toml = { workspace = true}
regex = { workspace = true}
uuid = { workspace = true}

[dev-dependencies]
tokio-test = { workspace = true}
tempfile = { workspace = true}
mockito = { workspace = true}
pretty_assertions = { workspace = true}
tracing-subscriber = { workspace = true}

[lints]
workspace = true
