[package]
name = "memex-core"
version = "1.0.9"
edition = "2021"
authors = ["chaorenex1"]
license = "Apache-2.0"
description = "Core logic for CodeCLI powered by Memex"
repository = "https://github.com/chaorenex/memex-cli"

[dependencies]
# Core runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time & UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Text & regex
regex = { workspace = true }

# Progress indicators
indicatif = { workspace = true }

# File operations
base64 = { workspace = true }
glob = { workspace = true }

# Performance optimization (Level 2-3)
sysinfo = { workspace = true }
lru = { workspace = true }
memmap2 = { workspace = true }
lazy_static = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockito = { workspace = true }
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }
memchr = "2.7"

[[bench]]
name = "stdio_perf"
harness = false

[[bench]]
name = "hotspot_analysis"
harness = false

[[bench]]
name = "stream_json_comparison"
harness = false

[[bench]]
name = "stream_json_v2_comparison"
harness = false

[lints]
workspace = true
