[package]
name = "memex-plugins"
version = "1.1.0"
edition = "2021"
authors = ["chaorenex1"]
license = "Apache-2.0"
description = "Core logic for CodeCLI powered by Memex"
repository = "https://github.com/chaorenex/memex-cli"

[dependencies]
memex-core = { workspace = true}
tokio = { workspace = true}
serde_json = { workspace = true}
anyhow = { workspace = true}
async-trait = { workspace = true}
reqwest = { workspace = true}
chrono = { workspace = true}
futures = { workspace = true}
tracing = { workspace = true}
base64 = { workspace = true}
glob = { workspace = true}
lru = { workspace = true}
memmap2 = { workspace = true}
lazy_static = { workspace = true}

[dev-dependencies]
mockito = { workspace = true}

[lints]
workspace = true
